[metadata]
name = overlockmqttauth
description = Simple testing of RESTful APIs
version = attr: overlockmqttauth.__version__
long_description = file: README.md
author = Michael Boulton
author_email = boulton@zoetrope.io

[options]
packages = find:
include_package_data = True

install_requires =
    pyyaml
    mongoengine

tests_require =
    pytest>=3.0.0
    # pytest-cov
    colorlog
    mock

[options.packages.find]
exclude =
    tests

[options.extras_require]
vernemq =
    flask
    redis
    paho-mqtt

[options.entry_points]
console_scripts =
    vmq_hook = overlockmqttauth.brokers.vernemq:start_broker

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[tool:pyflakes]
exclude = .tox,*.egg,dist,build,docs/source
show-source = true
max-line-length = 200
ignore = N802

[coverage:run]
omit =
    tests/*
    .eggs/*
    setup.py
    env/*
    build/*
    dist/*

[tool:pytest]
testpaths=overlockmqttauth tests
addopts =
    # --cov-report term-missing
    # --cov overlockmqttauth
    --doctest-modules
    --flakes
    -r xs -v --strict
norecursedirs =
    .git
    .tox
    example
